# wingz-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  build.sh  conanfile.py
assets/: manifest.json
include/wingz/: app.h  scene.h
include/wingz/core/: asset_manager.h  game_state.h  timer.h
include/wingz/ecs/: animation_system.h  combat_systems.h  components.h  particle.h  particle_system.h  systems.h
include/wingz/gfx/: camera_controller.h  imgui_context.h  texture.h
include/wingz/input/: action_map.h  input_manager.h
include/wingz/net/: client_interpolation.h  connection.h  host.h  replication.h  serializer.h  types.h
include/wingz/physics/: collider.h  physics_world.h
src/: CMakeLists.txt  main.cpp
src/wingz/: app.cpp  scene.cpp  window.cpp  window.h
src/wingz/core/: asset_manager.cpp  game_state.cpp  timer.cpp
src/wingz/ecs/: particle_system.cpp
src/wingz/gfx/: camera.cpp  camera.h  camera_controller.cpp  debug_ui.cpp  debug_ui.h  imgui_context.cpp  shader.cpp  shader.h  sprite_batch.cpp  sprite_batch.h  texture.cpp  texture_atlas.cpp  texture_atlas.h
src/wingz/input/: action_map.cpp  input_manager.cpp
src/wingz/net/: client_interpolation.cpp  connection.cpp  host.cpp  replication.cpp  serializer.cpp
src/wingz/physics/: physics_world.cpp
tools/: generate_glad.py
